# itlab-vision

./: .gitignore  .travis.yml  Files.txt  KWStyle.xml  LICENSE  README.md
photoeffects/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  photoeffects_sample  photoeffects_test
photoeffects/cmake/: DetectTBB.cmake
photoeffects/docs/source/: conf.py  index.rst
photoeffects/include/: photoeffects.hpp
photoeffects/perf/: CMakeLists.txt  boostColor_perf.cpp  perf_main.cpp  perf_utils.cpp  perf_utils.hpp
photoeffects/samples/: CMakeLists.txt  Makefile  antique_sample.cpp  boostColor_sample.cpp  boost_color_sample.cpp  cmake_install.cmake  edgeBlur_sample.cpp  fadeColor_sample.cpp  filmGrain_sample.cpp  fixed_point_sample.cpp  glow_sample.cpp  matte_sample.cpp  photoeffects_sample.cpp  sepia_sample.cpp  tint_sample.cpp  vignette_sample.cpp  warmify_sample.cpp
photoeffects/src/: CMakeCache.txt  CMakeLists.txt  Makefile  antique.cpp  boostColor.cpp  boost_color.cpp  cmake_install.cmake  edgeBlur.cpp  fadeColor.cpp  filmGrain.cpp  glow.cpp  matte.cpp  photoeffects.cpp  sepia.cpp  tint.cpp  vignette.cpp  warmify.cpp
photoeffects/src/docs/: antique.rst  boostColor.rst  boost_color.rst  edgeBlur.rst  edge_blur.rst  fadeColor.rst  fade_color.rst  filmGrain.rst  film_grain.rst  glow.rst  matte.rst  sepia.rst  tint.rst  vignette.rst  warmify.rst
photoeffects/test/: CMakeCache.txt  CMakeLists.txt  Makefile  antique_test.cpp  boostColor_test.cpp  boost_color_test.cpp  cmake_install.cmake  edgeBlur_test.cpp  fadeColor_test.cpp  filmGrain_test.cpp  glow_test.cpp  matte_test.cpp  photoeffects_test.cpp  sepia_test.cpp  test_utils.cpp  test_utils.hpp  tint_test.cpp  vignette_test.cpp  warmify_test.cpp
